refactor: ids case changed to standard format
