# src/main/java/com/leet5/ecommerce/controller/PaymentController.java
@@ -10,7 +10,7 @@ import org.springframework.web.bind.annotation.*;
 import static com.leet5.ecommerce.util.ApiConstants.API_VERSION_HEADER;
 
 @RestController
-@RequestMapping("/customers/{customerID}/orders/{orderID}/payments")
+@RequestMapping("/customers/{customerId}/orders/{orderId}/payments")
 public class PaymentController {
     private final PaymentServiceFactory paymentServiceFactory;
 
@@ -19,12 +19,12 @@ public class PaymentController {
     }
 
     @PostMapping
-    public ResponseEntity<Payment> processPayment(@PathVariable long customerID,
-                                                  @PathVariable long orderID,
+    public ResponseEntity<Payment> processPayment(@PathVariable long customerId,
+                                                  @PathVariable long orderId,
                                                   @RequestBody PaymentMethod paymentMethod,
                                                   @RequestHeader(API_VERSION_HEADER) int apiVersion) {
         final var paymentService = paymentServiceFactory.getService(apiVersion);
-        final var payment = paymentService.processPayment(new PaymentRequest(orderID, paymentMethod));
+        final var payment = paymentService.processPayment(new PaymentRequest(orderId, paymentMethod));
         return ResponseEntity.ok(payment);
     }
 }
